[gd_scene load_steps=13 format=3 uid="uid://dd4framlorcqb"]

[ext_resource type="Script" uid="uid://dhqbkrljqq521" path="res://Scenes/fluid_bug.gd" id="1_wnwru"]
[ext_resource type="Shader" uid="uid://dqlgtuowbyn8v" path="res://Shaders/flash.gdshader" id="2_8754c"]
[ext_resource type="Texture2D" uid="uid://c27iuyqe6ttme" path="res://Assets/Enemies/liquid_bug_wing.png" id="3_hemlf"]
[ext_resource type="Texture2D" uid="uid://bnn1tar5x2nmp" path="res://Assets/Enemies/liquid_bug_sac.png" id="4_wprb2"]
[ext_resource type="Texture2D" uid="uid://b4f34psbknt36" path="res://Assets/Enemies/liquid_bug.png" id="5_8e157"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66m6x"]
size = Vector2(46, 64)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wnwru"]
shader = ExtResource("2_8754c")
shader_parameter/flash_color = Vector4(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="Curve" id="Curve_5tpt0"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.0514019, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_xj1a0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("wing2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(35, -20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("wing2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.261799]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("wing1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-35, -20)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("wing1:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.261799]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sack:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CPUParticles2D:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_uoyt7"]
resource_name = "attack"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_cc0nh"]
resource_name = "idle"
length = 0.9
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("wing2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(35, -20), Vector2(30, -25), Vector2(35, -20), Vector2(30, -25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("wing2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [-0.261799, -0.523599, -0.261799, -0.523599]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("wing1:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(-35, -20), Vector2(-30, -25), Vector2(-35, -20), Vector2(-30, -25)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("wing1:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0.261799, 0.523599, 0.261799, 0.523599]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4njat"]
_data = {
&"RESET": SubResource("Animation_xj1a0"),
&"attack": SubResource("Animation_uoyt7"),
&"idle": SubResource("Animation_cc0nh")
}

[node name="FluidBug" type="Area2D"]
collision_layer = 2
collision_mask = 12
script = ExtResource("1_wnwru")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_66m6x")

[node name="wing1" type="Sprite2D" parent="."]
position = Vector2(-35, -20)
rotation = 0.261799
scale = Vector2(2, 2)
texture = ExtResource("3_hemlf")

[node name="wing2" type="Sprite2D" parent="."]
position = Vector2(35, -20)
rotation = -0.261799
scale = Vector2(2, 2)
texture = ExtResource("3_hemlf")
flip_h = true

[node name="Sack" type="Sprite2D" parent="."]
position = Vector2(0, 42)
scale = Vector2(2, 2)
texture = ExtResource("4_wprb2")
hframes = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_wnwru")
position = Vector2(0, 21)
scale = Vector2(2, 2)
texture = ExtResource("5_8e157")
hframes = 9

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, 43)
scale = Vector2(4, 4)
emitting = false
amount = 100
lifetime = 0.25
one_shot = true
explosiveness = 0.7
emission_shape = 3
emission_rect_extents = Vector2(10, 10)
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
angle_max = 180.0
scale_amount_min = 7.5
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_5tpt0")
color = Color(0, 0.364706, 0.760784, 1)

[node name="Animations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4njat")
}

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.6

[node name="HPTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false

[node name="StatusTransform2D" type="RemoteTransform2D" parent="."]
update_rotation = false

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
